<resources>
    <string name="app_name">C0777245_W2020_MAD3125_MidTerm</string>
    <string name="employment_status">Employment Status</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="tax_filing_system">Tax Filing System</string>
    <string name="save">Save</string>
    <string name="designation">Designation</string>
    <string name="gross_income">Gross Income</string>
    <string name="street_no">Street No.</string>
    <string name="street_name">Street Name</string>
    <string name="rrsp_contributed">RRSP Contributed</string>
    <string name="country">Country</string>
    <string name="province">Province</string>
    <string name="email">Email</string>
    <string name="sin">SIN</string>
    <string name="birthdate">Date of Birth</string>
    <string name="network_issue">NI</string>
    <string name="system_crashing">SC</string>
    <string name="slow_internet">SI</string>
    <string name="software_installation">ST</string>
    <string name="complaint_filed">Complaint Filed</string>
    <string name="clear">Clear</string>
    <string name="tax_filing_date">Tax Filing Date</string>
    <string name="tax_credentials">Tax Credentials</string>
    <array name="suffixArray">
        <item>Mr.</item>
        <item>Mrs.</item>
        <item>Ms.</item>
        <item>Miss.</item>
        <item>Dr.</item>
        <item>Sir.</item>
        <item>Lord.</item>
    </array>
    <array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </array>
</resources>
