<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_grey_900"
    android:theme="@style/Theme.MaterialComponents"
    tools:context=".PersonInformationEntryActivity">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sinTextView"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="11dp"
        android:hint="@string/sin"
        android:textColorHint="@color/green_300"
        app:boxStrokeColor="@color/green_300"
        app:boxStrokeErrorColor="@color/Red"
        app:hintTextColor="@color/green_300"
        app:layout_constraintBottom_toTopOf="@+id/firstNameTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:suffixTextColor="@color/Red">
        ​

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enterSINTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="9"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="@color/blue_grey_500"
            android:textSize="12sp"
            app:textInputLayoutFocusedRectEnabled="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/firstNameTextView"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="115dp"
        android:layout_height="60dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/enter_first_name"
        android:textColorHint="@color/green_300"
        app:boxStrokeColor="@color/green_300"
        app:boxStrokeErrorColor="@color/Red"
        app:hintTextColor="@color/green_300"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.127"
        app:layout_constraintStart_toEndOf="@+id/spinner"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.169"
        app:suffixTextColor="@color/Red">
        ​

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enterFirstNameTextView"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="@color/blue_grey_500"
            android:textSize="12sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lastNameTextView"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="115dp"
        android:layout_height="60dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/enter_last_name"
        android:textColorHint="@color/green_300"
        app:boxStrokeColor="@color/green_300"
        app:boxStrokeErrorColor="@color/Red"
        app:hintTextColor="@color/green_300"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/firstNameTextView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.169"
        app:suffixTextColor="@color/Red">
        ​

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enterLastNameTextView"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="@color/blue_grey_500"
            android:textSize="12sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tax_filing_system"
        android:textAlignment="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:textColor="@color/blue_grey_500"
        android:textSize="@dimen/largeLabelSize"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="115dp"
        android:layout_height="50dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="330dp"
        android:layout_marginBottom="29dp"
        android:background="@drawable/btn_rounded_green_300"
        android:entries="@array/suffixArray"
        android:popupBackground="@drawable/spinner_rounded_green_300"
        android:spinnerMode="dropdown"
        android:textAlignment="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
        android:textColor="@color/blue_grey_500"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/genderCodeSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/rrspTextView"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="385dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/rrsp_contributed"
        android:textColorHint="@color/green_300"
        app:boxStrokeColor="@color/green_300"
        app:boxStrokeErrorColor="@color/Red"
        app:hintTextColor="@color/green_300"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grossIncomeTextView"
        app:layout_constraintVertical_bias="0.206"
        app:suffixTextColor="@color/Red">
        ​

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enterrrspTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="@color/blue_grey_500"
            android:textSize="12sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/grossIncomeTextView"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="385dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="312dp"
        android:hint="@string/gross_income"
        android:textColorHint="@color/green_300"
        app:boxStrokeColor="@color/green_300"
        app:boxStrokeErrorColor="@color/Red"
        app:hintTextColor="@color/green_300"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateTextView"
        app:suffixTextColor="@color/Red">
        ​

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enterGrossIncomeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="@color/blue_grey_500"
            android:textSize="12sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <Spinner
        android:id="@+id/genderCodeSpinner"
        android:layout_width="115dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_rounded_green_300"
        android:entries="@array/gender"
        android:popupBackground="@drawable/spinner_rounded_green_300"
        android:spinnerMode="dropdown"
        android:textAlignment="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
        android:textColor="@color/blue_grey_500"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dateTextView"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="35dp"
        android:hint="@string/birthdate"
        android:textColorHint="@color/green_300"
        app:boxStrokeColor="@color/green_300"
        app:boxStrokeErrorColor="@color/Red"
        app:hintTextColor="@color/green_300"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButton"
        app:layout_constraintTop_toBottomOf="@+id/firstNameTextView"
        app:startIconCheckable="true"
        app:startIconTint="@color/green_400"
        app:suffixTextColor="@color/Red">
        ​

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enterDateTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="@color/blue_grey_500"
            android:textSize="12sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="save"
        android:text="@string/save"
        android:textColor="@color/green_300"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:onClick="dateImageButton"
        app:layout_constraintEnd_toStartOf="@+id/dateTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genderCodeSpinner"
        app:srcCompat="@android:drawable/ic_menu_my_calendar" />

    <Button
        android:id="@+id/button2"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="clear"
        android:text="@string/clear"
        android:textColor="@color/green_300"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.843"
        app:layout_constraintStart_toEndOf="@+id/button" />

</androidx.constraintlayout.widget.ConstraintLayout>